--- a/Gallery.html
+++ b/Gallery.html
@@ -12,9 +12,9 @@
             <nav>
                 <div class="hamburger">☰</div>
                 <ul>
-                    <li><a href="Index.html">Home</a></li>
-                    <li><a href="Article.html">Articles</a></li>
-                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="article.html">Articles</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
             </nav>
         </header>
