--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     
                     The accompanying music video further amplifies this theme, featuring dynamic choreography and striking visuals that convey strength and confidence. The use of a punk-inspired aesthetic, complete with edgy fashion choices, reinforces the song's message of defiance against societal norms. By presenting themselves in a way that subverts traditional expectations, (G)I-DLE inspires their fans to embrace their true selves without fear of judgment.
                 </p>
-                <button class="button" onclick="window.location.href='Article.html#Article-1'">Continue</button>
+                <button class="button" onclick="window.location.href='article.html#Article-1'">Continue</button>
             </section>
             <section class="latest-news">
                 <h2>Latest News</h2>
@@ -43,17 +43,17 @@
                 <p>
                     The 2024 MTV Video Music Awards (VMAs) took place at the Barclays Center in Brooklyn, New York, delivering an unforgettable evening filled with excitement, creativity, and memorable performances. This year’s ceremony highlighted both established icons and rising stars, showcasing the vibrant and ever-evolving landscape of the music industry.
                 </p>
-                <button class="button" onclick="window.location.href='Article.html#Article-2'">More...</button>
+                <button class="button" onclick="window.location.href='article.html#Article-2'">More...</button>
                 <h3>Sabrina Carpenter's Evolution: From Emotional Vulnerability in Emails I Can’t Send to Playful Sophistication in Short n' Sweet</h3>
                 <p>
                     Sabrina Carpenter's recent albums, Emails I Can’t Send (2022) and Short n' Sweet (2024), showcase her growth as a singer-songwriter and her ability to transition between emotional vulnerability and lighthearted fun. These albums, though distinct in tone and content, reflect her evolving artistry and have contributed significantly to her increasing popularity in the pop music scene.
                 </p>
-                <button class="button" onclick="window.location.href='Article.html#Article-3'">More...</button>
+                <button class="button" onclick="window.location.href='article.html#Article-3'">More...</button>
                 <h3>Exploring the Highlights of Eternal Sunshine by Ariana Grande</h3>
                 <p>
                     Ariana Grande’s latest album, Eternal Sunshine, released in January 2024, marks a significant milestone in her career, showcasing her evolution as an artist through a series of impactful singles. This article delves into four standout tracks: “yes, and?”, “That Boy Is Mine,” “We Can't Be Friends (Wait for Your Love),” and “Ordinary Things (feat. Nonna).” Each song explores various themes of love, friendship, and self-acceptance, reflecting Grande’s personal growth and artistry.
                 </p>
-                <button class="button" onclick="window.location.href='Article.html#Article-4'">More...</button>
+                <button class="button" onclick="window.location.href='article.html#Article-4'">More...</button>
             </section>
         </main>
 
